--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="page_home">Inicio</string>
     <string name="page_entries">Entradas</string>
 
+    <string name="page_properties">Propriedades</string>
+    <string name="page_property_entries">Entradas</string>
+
     <!--    BottomSheet-->
     <string name="text_title_bottom_sheet">Atenção</string>
     <string name="text_button_bottom_sheet">Entendi</string>
